remove posititon:fixed for popup and add align-items:center

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-  position: fixed;
+  align-items: center;
+  justify-content: center;
   background-color: white;
   width: 430px;
   margin-top: 195px;
